Fixed up openocd config files so that they work with more recent versions of openocd

--- a/stm32f1x_64k.cfg
+++ b/stm32f1x_64k.cfg
@@ -72,7 +72,11 @@ if {[using_jtag]} {
 }
 
 set _TARGETNAME $_CHIPNAME.cpu
-target create $_TARGETNAME cortex_m -endian $_ENDIAN -chain-position $_TARGETNAME
+
+dap create $_CHIPNAME.dap -chain-position $_TARGETNAME
+target create $_TARGETNAME cortex_m -dap $_CHIPNAME.dap
+
+#target create $_TARGETNAME cortex_m -endian $_ENDIAN -dap $_CHIPNAME.dap  $_TARGETNAME
 
 $_TARGETNAME configure -work-area-phys 0x20000000 -work-area-size $_WORKAREASIZE -work-area-backup 0
 
@@ -108,3 +112,4 @@ $_TARGETNAME configure -event trace-config {
 	# assignment
 	mmw 0xE0042004 0x00000020 0
 }
+
